ready for deployment

--- a/server/central-sync/deployment.properties
+++ b/server/central-sync/deployment.properties
@@ -1,2 +1,3 @@
 #TODO: Add release URL
-repo.maven.release=
+repo.maven.release=https://oss.sonatype.org/service/local/staging/deploy/maven2/
+repo.maven.snapshot=https://oss.sonatype.org/content/repositories/snapshots/
