--- a/server/main/src/org/jetbrains/bsp/BUILD
+++ b/server/main/src/org/jetbrains/bsp/BUILD
@@ -2,7 +2,7 @@ load("@graknlabs_bazel_distribution//maven/templates:rules.bzl", "assemble_maven
 
 java_binary(
     name = "bsp",
-    tags = ["maven_coordinates=org.jetbrains.bsp:bazel-bsp_0.1:{pom_version}"],
+    tags = ["maven_coordinates=org.jetbrains.bsp:bazel-bsp:{pom_version}"],
     deps = [
         "@com_google_protobuf//:protobuf_java",
         "@googleapis//:google_devtools_build_v1_build_events_java_proto",
@@ -31,8 +31,8 @@ assemble_maven(
     package = "{maven_packages}",
     project_name = "Bazel BSP",
     project_description = "Bazel BSP - A Build Server Protocol implementation for Google's build system Bazel",
-    project_url = "https://github.com/andrefmrocha/bazel-bsp",
-    scm_url = "https://github.com/andrefmrocha/bazel-bsp.git",
+    project_url = "https://github.com/jetbrains/bazel-bsp",
+    scm_url = "https://github.com/jetbrains/bazel-bsp.git",
     version_file = "//central-sync:VERSION",
     developers = {"1": ["name=Andre Rocha", "email=andre.rocha@jetbrains.com", "organization=JetBrains"],
                   "2": ["name=Daniel Wagner-Hall", "email=dawagner@gmail.com", "organization=SeleniumHQ"],},
