Support kotlin projects

--- a/server/main/src/org/jetbrains/bsp/BUILD
+++ b/server/main/src/org/jetbrains/bsp/BUILD
@@ -23,6 +23,7 @@ java_binary(
     main_class = "org.jetbrains.bsp.Main",
     srcs = glob(["*.java"]),
     visibility = ["//visibility:public"],
+    resources = ["aspects.bzl"],
 )
 
 assemble_maven(
