--- a/server/sample-repo/dep/deeper/BUILD
+++ b/server/sample-repo/dep/deeper/BUILD
@@ -2,7 +2,10 @@ load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")
 
 scala_library(
     name = "deeper",
-    srcs = glob(["*.java", "*.scala"]),
+    srcs = glob([
+        "*.java",
+        "*.scala",
+    ]),
+    visibility = ["//visibility:public"],
     deps = ["@maven//:com_google_guava_guava"],
-    visibility = ["//visibility:public"]
 )
