--- a/server/sample-repo/example/BUILD
+++ b/server/sample-repo/example/BUILD
@@ -2,14 +2,17 @@ load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")
 
 filegroup(
     name = "resources",
-    srcs = ["file.txt", "file2.txt"]
+    srcs = [
+        "file.txt",
+        "file2.txt",
+    ],
 )
 
 scala_binary(
     name = "example",
     srcs = ["Example.scala"],
-    deps = ["//dep:dep"],
     main_class = "example.Example",
+    resources = [":resources"],
     visibility = ["//visibility:public"],
-    resources = [":resources"]
+    deps = ["//dep"],
 )
