--- a/server/sample-repo/WORKSPACE
+++ b/server/sample-repo/WORKSPACE
@@ -2,51 +2,56 @@ load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 
 # bazel-skylib 0.8.0 released 2019.03.20 (https://github.com/bazelbuild/bazel-skylib/releases/tag/0.8.0)
 skylib_version = "1.0.2"
+
 http_archive(
     name = "bazel_skylib",
-    type = "tar.gz",
-    url = "https://github.com/bazelbuild/bazel-skylib/releases/download/{}/bazel-skylib-{}.tar.gz".format (skylib_version, skylib_version),
     sha256 = "97e70364e9249702246c0e9444bccdc4b847bed1eb03c5a3ece4f83dfe6abc44",
+    type = "tar.gz",
+    url = "https://github.com/bazelbuild/bazel-skylib/releases/download/{}/bazel-skylib-{}.tar.gz".format(skylib_version, skylib_version),
 )
 
 # For bazel_bsp aspect
 http_archive(
     name = "bazel_bsp",
-    url = "https://github.com/andrefmrocha/bazel-bsp/archive/09ef0c343c474bcad33a6a302dfd6a07cf37ea14.tar.gz",
     strip_prefix = "bazel-bsp-09ef0c343c474bcad33a6a302dfd6a07cf37ea14",
+    url = "https://github.com/andrefmrocha/bazel-bsp/archive/09ef0c343c474bcad33a6a302dfd6a07cf37ea14.tar.gz",
 )
 
 # For rules_scala
 http_archive(
     name = "io_bazel_rules_scala",
-    url = "https://github.com/andrefmrocha/rules_scala/archive/d6186617cfe64cef2074b23ca58daac75fe40d42.tar.gz",
     strip_prefix = "rules_scala-d6186617cfe64cef2074b23ca58daac75fe40d42",
+    url = "https://github.com/andrefmrocha/rules_scala/archive/d6186617cfe64cef2074b23ca58daac75fe40d42.tar.gz",
 )
 
 load("@io_bazel_rules_scala//:version.bzl", "bazel_version")
+
 bazel_version(name = "bazel_version")
 
 load("@io_bazel_rules_scala//scala:toolchains.bzl", "scala_register_toolchains")
+
 scala_register_toolchains()
 
 load("@io_bazel_rules_scala//scala:scala.bzl", "scala_repositories")
+
 scala_repositories((
     "2.12.8",
     {
-       "scala_compiler": "f34e9119f45abd41e85b9e121ba19dd9288b3b4af7f7047e86dc70236708d170",
-       "scala_library": "321fb55685635c931eba4bc0d7668349da3f2c09aee2de93a70566066ff25c28",
-       "scala_reflect": "4d6405395c4599ce04cea08ba082339e3e42135de9aae2923c9f5367e957315a"
-    }
+        "scala_compiler": "f34e9119f45abd41e85b9e121ba19dd9288b3b4af7f7047e86dc70236708d170",
+        "scala_library": "321fb55685635c931eba4bc0d7668349da3f2c09aee2de93a70566066ff25c28",
+        "scala_reflect": "4d6405395c4599ce04cea08ba082339e3e42135de9aae2923c9f5367e957315a",
+    },
 ))
 
-protobuf_version="31ebe2ac71400344a5db91ffc13c4ddfb7589f92"
-protobuf_version_sha256="0e8e32d44c9d4572975f43591b51cd3c77392661e4ded17fdfab81e8460344e8"
+protobuf_version = "31ebe2ac71400344a5db91ffc13c4ddfb7589f92"
+
+protobuf_version_sha256 = "0e8e32d44c9d4572975f43591b51cd3c77392661e4ded17fdfab81e8460344e8"
 
 http_archive(
     name = "com_google_protobuf",
-    url = "https://github.com/protocolbuffers/protobuf/archive/%s.tar.gz" % protobuf_version,
-    strip_prefix = "protobuf-%s" % protobuf_version,
     sha256 = protobuf_version_sha256,
+    strip_prefix = "protobuf-%s" % protobuf_version,
+    url = "https://github.com/protocolbuffers/protobuf/archive/%s.tar.gz" % protobuf_version,
 )
 
 load("@io_bazel_rules_scala//scala:scala_maven_import_external.bzl", "scala_maven_import_external")
@@ -68,9 +73,9 @@ scala_maven_import_external(
 # For guava
 http_archive(
     name = "rules_jvm_external",
-    strip_prefix = "rules_jvm_external-2.8",
     sha256 = "79c9850690d7614ecdb72d68394f994fef7534b292c4867ce5e7dec0aa7bdfad",
-    url = "https://github.com/bazelbuild/rules_jvm_external/archive/2.8.zip"
+    strip_prefix = "rules_jvm_external-2.8",
+    url = "https://github.com/bazelbuild/rules_jvm_external/archive/2.8.zip",
 )
 
 load("@rules_jvm_external//:defs.bzl", "maven_install")
@@ -80,9 +85,9 @@ maven_install(
     artifacts = [
         "com.google.guava:guava:28.0-jre",
     ],
+    fetch_sources = True,
     repositories = [
         "https://maven.google.com",
         "https://repo1.maven.org/maven2",
     ],
-    fetch_sources = True,
 )
