--- a/server/sample-repo/dep/BUILD
+++ b/server/sample-repo/dep/BUILD
@@ -2,7 +2,10 @@ load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")
 
 scala_library(
     name = "dep",
-    srcs = glob(["*.java", "*.scala"]),
-    deps = ["//dep/deeper:deeper"],
+    srcs = glob([
+        "*.java",
+        "*.scala",
+    ]),
     visibility = ["//visibility:public"],
+    deps = ["//dep/deeper"],
 )
