[fix] memoize BazelProcess output so that it doesn't get lost (#154)

--- a/server/bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner/data/BUILD
+++ b/server/bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner/data/BUILD
@@ -9,5 +9,6 @@ java_library(
         "//commons",
         "//logger",
         "@maven//:ch_epfl_scala_bsp4j",
+        "@maven//:com_google_guava_guava",
     ],
 )
