[change] project uses (mostly) `io.vavr.Option` and `io.vavr.List` (#192)
* options 1

* options 2

* options 3

* contributing update

* option 4

* list 1

* list 2

* changelog update

* format

--- a/server/executioncontext/projectview/src/main/java/org/jetbrains/bsp/bazel/projectview/model/sections/BUILD
+++ b/server/executioncontext/projectview/src/main/java/org/jetbrains/bsp/bazel/projectview/model/sections/BUILD
@@ -7,10 +7,14 @@ java_library(
         "//executioncontext/projectview/src/main/java/org/jetbrains/bsp/bazel/projectview/model:__pkg__",
         "//executioncontext/projectview/src/test/java/org/jetbrains/bsp/bazel/projectview/model/sections:__pkg__",
     ],
-    exports = ["@maven//:ch_epfl_scala_bsp4j"],
+    exports = [
+        "@maven//:ch_epfl_scala_bsp4j",
+        "@maven//:io_vavr_vavr",
+    ],
     deps = [
         "@maven//:ch_epfl_scala_bsp4j",
         "@maven//:com_google_guava_guava",
+        "@maven//:io_vavr_vavr",
         "@maven//:org_apache_commons_commons_collections4",
     ],
 )
