--- a/server/executioncontext/projectview/src/main/java/org/jetbrains/bsp/bazel/projectview/parser/splitter/BUILD
+++ b/server/executioncontext/projectview/src/main/java/org/jetbrains/bsp/bazel/projectview/parser/splitter/BUILD
@@ -7,8 +7,12 @@ java_library(
         "//executioncontext/projectview/src/main/java/org/jetbrains/bsp/bazel/projectview/parser:__subpackages__",
         "//executioncontext/projectview/src/test/java/org/jetbrains/bsp/bazel/projectview/parser/splitter:__pkg__",
     ],
+    exports = [
+        "@maven//:io_vavr_vavr",
+    ],
     deps = [
         "@maven//:com_google_guava_guava",
+        "@maven//:io_vavr_vavr",
         "@maven//:org_apache_commons_commons_collections4",
     ],
 )
