--- a/server/executioncontext/projectview/src/main/java/org/jetbrains/bsp/bazel/projectview/model/sections/BUILD
+++ b/server/executioncontext/projectview/src/main/java/org/jetbrains/bsp/bazel/projectview/model/sections/BUILD
@@ -9,6 +9,7 @@ java_library(
     ],
     exports = [
         "@maven//:ch_epfl_scala_bsp4j",
+        "@maven//:com_google_guava_guava",
         "@maven//:io_vavr_vavr",
     ],
     deps = [
