--- a/server/executioncontext/projectview/src/test/java/org/jetbrains/bsp/bazel/projectview/parser/sections/BUILD
+++ b/server/executioncontext/projectview/src/test/java/org/jetbrains/bsp/bazel/projectview/parser/sections/BUILD
@@ -1,24 +1,20 @@
-load("@rules_java//java:defs.bzl", "java_test")
+load("//:junit5.bzl", "java_junit5_test")
 
-java_test(
+java_junit5_test(
     name = "ProjectViewListSectionParserTest",
     size = "small",
     srcs = ["ProjectViewListSectionParserTest.java"],
-    runtime_deps = [
-        "@maven//:junit_junit",
-    ],
+    test_package = "org.jetbrains.bsp.bazel.projectview.parser.sections",
     deps = [
         "//executioncontext/projectview/src/main/java/org/jetbrains/bsp/bazel/projectview/parser/sections",
     ],
 )
 
-java_test(
+java_junit5_test(
     name = "ProjectViewSingletonSectionParserTest",
     size = "small",
     srcs = ["ProjectViewSingletonSectionParserTest.java"],
-    runtime_deps = [
-        "@maven//:junit_junit",
-    ],
+    test_package = "org.jetbrains.bsp.bazel.projectview.parser.sections",
     deps = [
         "//executioncontext/projectview/src/main/java/org/jetbrains/bsp/bazel/projectview/parser/sections",
     ],
