--- a/server/executioncontext/installationcontext/src/test/java/org/jetbrains/bsp/bazel/installationcontext/entities/mappers/BUILD
+++ b/server/executioncontext/installationcontext/src/test/java/org/jetbrains/bsp/bazel/installationcontext/entities/mappers/BUILD
@@ -1,27 +1,21 @@
-load("@rules_java//java:defs.bzl", "java_test")
+load("//:junit5.bzl", "java_junit5_test")
 
-java_test(
+java_junit5_test(
     name = "InstallationContextJavaPathEntityMapperTest",
     size = "small",
     srcs = ["InstallationContextJavaPathEntityMapperTest.java"],
-    runtime_deps = [
-        "@maven//:junit_junit",
-    ],
+    test_package = "org.jetbrains.bsp.bazel.installationcontext.entities.mappers",
     deps = [
         "//executioncontext/installationcontext/src/main/java/org/jetbrains/bsp/bazel/installationcontext/entities/mappers",
-        "@maven//:org_assertj_assertj_core",
     ],
 )
 
-java_test(
+java_junit5_test(
     name = "InstallationContextDebuggerAddressEntityMapperTest",
     size = "small",
     srcs = ["InstallationContextDebuggerAddressEntityMapperTest.java"],
-    runtime_deps = [
-        "@maven//:junit_junit",
-    ],
+    test_package = "org.jetbrains.bsp.bazel.installationcontext.entities.mappers",
     deps = [
         "//executioncontext/installationcontext/src/main/java/org/jetbrains/bsp/bazel/installationcontext/entities/mappers",
-        "@maven//:org_assertj_assertj_core",
     ],
 )
