[fix] now sources of thrift dependencies are included as dependencies (#202)
* thrift language plugin

* lil aspects cleanup

* format

* changelog

* dependency tree

* thrift proto cleanup

* changelog update

* test update

* review fixesssss

* rebase fixx

--- a/server/server/src/main/java/org/jetbrains/bsp/bazel/server/sync/BUILD
+++ b/server/server/src/main/java/org/jetbrains/bsp/bazel/server/sync/BUILD
@@ -14,6 +14,7 @@ java_library(
         "//server/src/main/java/org/jetbrains/bsp/bazel/server/bsp/info",
         "//server/src/main/java/org/jetbrains/bsp/bazel/server/bsp/managers",
         "//server/src/main/java/org/jetbrains/bsp/bazel/server/bsp/utils",
+        "//server/src/main/java/org/jetbrains/bsp/bazel/server/sync/dependencytree",
         "//server/src/main/java/org/jetbrains/bsp/bazel/server/sync/proto:bsp_target_info_java_proto",
         "@com_google_protobuf//:protobuf_java",
         "@maven//:ch_epfl_scala_bsp4j",
