[change] load project view on each use (#217)
Co-authored-by: Lukasz Wawrzyk <uwawrzyk@twitter.com>

--- a/server/server/src/main/java/org/jetbrains/bsp/bazel/server/bsp/config/BUILD
+++ b/server/server/src/main/java/org/jetbrains/bsp/bazel/server/bsp/config/BUILD
@@ -5,7 +5,9 @@ java_library(
     srcs = glob(["*.java"]),
     visibility = ["//server:__subpackages__"],
     deps = [
+        "//bazelrunner",
         "//executioncontext/projectview:parser",
+        "//server/src/main/java/org/jetbrains/bsp/bazel/server/bsp/info",
         "@maven//:com_google_guava_guava",
     ],
 )
