[feature] `build_flags` support in project view (#194)
* projectview list section and excludable list section

* better option

* list section parser

* build flags section in project view

* project view parser update

* usage

* readme update

* changelog update

* rebase

* format

* fix

* rebase fix

* cleanup

* Rename .java to .kt

* tests are in kotlin 1

* i love kotlin

* merge fix

* merge fix 2

* format

--- a/server/executioncontext/projectview/src/test/java/org/jetbrains/bsp/bazel/projectview/parser/sections/BUILD
+++ b/server/executioncontext/projectview/src/test/java/org/jetbrains/bsp/bazel/projectview/parser/sections/BUILD
@@ -11,6 +11,16 @@ java_junit5_test(
 )
 
 java_junit5_test(
+    name = "ProjectViewExcludableListSectionParserTest",
+    size = "small",
+    srcs = ["ProjectViewExcludableListSectionParserTest.java"],
+    test_package = "org.jetbrains.bsp.bazel.projectview.parser.sections",
+    deps = [
+        "//executioncontext/projectview/src/main/java/org/jetbrains/bsp/bazel/projectview/parser/sections",
+    ],
+)
+
+java_junit5_test(
     name = "ProjectViewSingletonSectionParserTest",
     size = "small",
     srcs = ["ProjectViewSingletonSectionParserTest.java"],
