[change] project view is now in kotlin! (#218)
* koooooootlin

* formatt

--- a/server/executioncontext/installationcontext/src/test/java/org/jetbrains/bsp/bazel/installationcontext/BUILD
+++ b/server/executioncontext/installationcontext/src/test/java/org/jetbrains/bsp/bazel/installationcontext/BUILD
@@ -1,4 +1,4 @@
-load("//:junit5.bzl", "java_junit5_test")
+load("//:junit5.bzl", "java_junit5_test", "kt_junit5_test")
 
 java_junit5_test(
     name = "InstallationContextTest",
@@ -10,10 +10,10 @@ java_junit5_test(
     ],
 )
 
-java_junit5_test(
+kt_junit5_test(
     name = "InstallationContextConstructorTest",
     size = "small",
-    srcs = ["InstallationContextConstructorTest.java"],
+    srcs = ["InstallationContextConstructorTest.kt"],
     test_package = "org.jetbrains.bsp.bazel.installationcontext",
     deps = [
         "//executioncontext/installationcontext/src/main/java/org/jetbrains/bsp/bazel/installationcontext",
