--- a/server/executioncontext/installationcontext/src/test/java/org/jetbrains/bsp/bazel/installationcontext/entities/mappers/BUILD
+++ b/server/executioncontext/installationcontext/src/test/java/org/jetbrains/bsp/bazel/installationcontext/entities/mappers/BUILD
@@ -1,19 +1,19 @@
-load("//:junit5.bzl", "java_junit5_test")
+load("//:junit5.bzl", "kt_junit5_test")
 
-java_junit5_test(
+kt_junit5_test(
     name = "InstallationContextJavaPathEntityMapperTest",
     size = "small",
-    srcs = ["InstallationContextJavaPathEntityMapperTest.java"],
+    srcs = ["InstallationContextJavaPathEntityMapperTest.kt"],
     test_package = "org.jetbrains.bsp.bazel.installationcontext.entities.mappers",
     deps = [
         "//executioncontext/installationcontext/src/main/java/org/jetbrains/bsp/bazel/installationcontext/entities/mappers",
     ],
 )
 
-java_junit5_test(
+kt_junit5_test(
     name = "InstallationContextDebuggerAddressEntityMapperTest",
     size = "small",
-    srcs = ["InstallationContextDebuggerAddressEntityMapperTest.java"],
+    srcs = ["InstallationContextDebuggerAddressEntityMapperTest.kt"],
     test_package = "org.jetbrains.bsp.bazel.installationcontext.entities.mappers",
     deps = [
         "//executioncontext/installationcontext/src/main/java/org/jetbrains/bsp/bazel/installationcontext/entities/mappers",
