--- a/server/executioncontext/workspacecontext/src/test/java/org/jetbrains/bsp/bazel/workspacecontext/BUILD
+++ b/server/executioncontext/workspacecontext/src/test/java/org/jetbrains/bsp/bazel/workspacecontext/BUILD
@@ -1,9 +1,9 @@
-load("//:junit5.bzl", "java_junit5_test")
+load("//:junit5.bzl", "java_junit5_test", "kt_junit5_test")
 
-java_junit5_test(
+kt_junit5_test(
     name = "WorkspaceContextConstructorImplTest",
     size = "small",
-    srcs = ["WorkspaceContextConstructorImplTest.java"],
+    srcs = ["WorkspaceContextConstructorImplTest.kt"],
     test_package = "org.jetbrains.bsp.bazel.workspacecontext",
     deps = [
         "//executioncontext/workspacecontext/src/main/java/org/jetbrains/bsp/bazel/workspacecontext",
