--- a/server/executioncontext/workspacecontext/src/test/java/org/jetbrains/bsp/bazel/workspacecontext/entries/mappers/BUILD
+++ b/server/executioncontext/workspacecontext/src/test/java/org/jetbrains/bsp/bazel/workspacecontext/entries/mappers/BUILD
@@ -1,9 +1,9 @@
-load("//:junit5.bzl", "java_junit5_test")
+load("//:junit5.bzl", "kt_junit5_test")
 
-java_junit5_test(
+kt_junit5_test(
     name = "WorkspaceContextTargetsEntityMapperTest",
     size = "small",
-    srcs = ["WorkspaceContextTargetsEntityMapperTest.java"],
+    srcs = ["WorkspaceContextTargetsEntityMapperTest.kt"],
     test_package = "org.jetbrains.bsp.bazel.workspacecontext.entries.mappers",
     deps = [
         "//executioncontext/workspacecontext/src/main/java/org/jetbrains/bsp/bazel/workspacecontext/entries/mappers",
