[change] logging level has been set to info and doesn't include events (#223)
* logging level = info

* bep events are debug now

* changelog

* rebase fix

--- a/server/bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner/BUILD
+++ b/server/bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner/BUILD
@@ -3,7 +3,7 @@ load("@rules_java//java:defs.bzl", "java_library")
 java_library(
     name = "bazelrunner",
     srcs = glob(["*.java"]),
-    resources = ["//bazelrunner/src/main/resources"],
+    resources = ["//log4j_config"],
     visibility = ["//bazelrunner:__subpackages__"],
     deps = [
         "//bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner/outputs",
