--- a/server/install/src/main/java/org/jetbrains/bsp/bazel/install/BUILD
+++ b/server/install/src/main/java/org/jetbrains/bsp/bazel/install/BUILD
@@ -1,13 +1,14 @@
-load("@rules_java//java:defs.bzl", "java_library")
+load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
 
-java_library(
+kt_jvm_library(
     name = "install",
-    srcs = glob(["*.java"]),
+    srcs = glob(["*.kt"]),
     resources = ["//install/src/main/resources"],
     visibility = ["//install:__subpackages__"],
     deps = [
         "//commons",
         "//executioncontext/installationcontext/src/main/java/org/jetbrains/bsp/bazel/installationcontext",
+        "//executioncontext/projectview:generator",
         "//executioncontext/projectview:parser",
         "//install/src/main/java/org/jetbrains/bsp/bazel/install/cli",
         "@maven//:ch_epfl_scala_bsp4j",
