--- a/server/install/src/main/java/org/jetbrains/bsp/bazel/install/cli/BUILD
+++ b/server/install/src/main/java/org/jetbrains/bsp/bazel/install/cli/BUILD
@@ -1,13 +1,18 @@
-load("@rules_java//java:defs.bzl", "java_library")
+load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
 
-java_library(
+kt_jvm_library(
     name = "cli",
-    srcs = glob(["*.java"]),
-    visibility = ["//install/src/main/java/org/jetbrains/bsp/bazel/install:__subpackages__"],
+    srcs = glob(["*.kt"]),
+    visibility = [
+        "//install/src/main/java/org/jetbrains/bsp/bazel/install:__subpackages__",
+        "//install/src/test/java/org/jetbrains/bsp/bazel/install/cli:__pkg__",
+    ],
     exports = [
+        "@maven//:com_google_guava_guava",
         "@maven//:io_vavr_vavr",
     ],
     deps = [
+        "@maven//:com_google_guava_guava",
         "@maven//:commons_cli_commons_cli",
         "@maven//:io_vavr_vavr",
     ],
