[change] bazel runner as kotlin (#230)
* [release] 2.0.0 (#229)

* authors update

* version bump & readme update

* chengelog update

* bazel runner as kotlin

Co-authored-by: Marcin Abramowicz <44381959+abrams27@users.noreply.github.com>
Co-authored-by: Lukasz Wawrzyk <uwawrzyk@twitter.com>

--- a/server/bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner/BUILD
+++ b/server/bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner/BUILD
@@ -1,8 +1,8 @@
-load("@rules_java//java:defs.bzl", "java_library")
+load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
 
-java_library(
+kt_jvm_library(
     name = "bazelrunner",
-    srcs = glob(["*.java"]),
+    srcs = glob(["*.kt"]),
     resources = ["//log4j_config"],
     visibility = ["//bazelrunner:__subpackages__"],
     deps = [
@@ -15,8 +15,7 @@ java_library(
         "@maven//:ch_epfl_scala_bsp4j",
         "@maven//:com_fasterxml_jackson_core_jackson_annotations",
         "@maven//:com_fasterxml_jackson_core_jackson_databind",
-        "@maven//:com_google_guava_guava",
-        "@maven//:io_vavr_vavr",
+        "@maven//:com_fasterxml_jackson_module_jackson_module_kotlin",
         "@maven//:org_apache_logging_log4j_log4j_api",
         "@maven//:org_apache_logging_log4j_log4j_core",
         "@maven//:org_eclipse_lsp4j_org_eclipse_lsp4j_jsonrpc",
