--- a/server/bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner/outputs/BUILD
+++ b/server/bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner/outputs/BUILD
@@ -1,14 +1,13 @@
-load("@rules_java//java:defs.bzl", "java_library")
+load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
 
-java_library(
+kt_jvm_library(
     name = "outputs",
-    srcs = glob(["*.java"]),
+    srcs = glob(["*.kt"]),
     visibility = ["//visibility:public"],
     deps = [
         "//bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner/utils",
         "//commons",
         "//logger",
         "@maven//:ch_epfl_scala_bsp4j",
-        "@maven//:io_vavr_vavr",
     ],
 )
