--- a/server/bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner/params/BUILD
+++ b/server/bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner/params/BUILD
@@ -1,11 +1,7 @@
-load("@rules_java//java:defs.bzl", "java_library")
+load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
 
-java_library(
+kt_jvm_library(
     name = "params",
-    srcs = glob(["*.java"]),
+    srcs = glob(["*.kt"]),
     visibility = ["//bazelrunner:__subpackages__"],
-    deps = [
-        "@maven//:ch_epfl_scala_bsp4j",
-        "@maven//:io_vavr_vavr",
-    ],
 )
