--- a/server/bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner/utils/BUILD
+++ b/server/bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner/utils/BUILD
@@ -1,12 +1,11 @@
-load("@rules_java//java:defs.bzl", "java_library")
+load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
 
-java_library(
+kt_jvm_library(
     name = "utils",
-    srcs = glob(["*.java"]),
+    srcs = glob(["*.kt"]),
     visibility = ["//visibility:public"],
     deps = [
         "//bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner/params",
         "@maven//:ch_epfl_scala_bsp4j",
-        "@maven//:com_google_guava_guava",
     ],
 )
