[change] guava `HostAndPort` out + more kotlin (#237)
* no more host and port

* Rename .java to .kt

* koooootlin

* format + fix

* visibility

--- a/server/executioncontext/api/src/main/java/org/jetbrains/bsp/bazel/executioncontext/api/BUILD
+++ b/server/executioncontext/api/src/main/java/org/jetbrains/bsp/bazel/executioncontext/api/BUILD
@@ -1,8 +1,8 @@
-load("@rules_java//java:defs.bzl", "java_library")
+load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
 
-java_library(
+kt_jvm_library(
     name = "api",
-    srcs = glob(["*.java"]),
+    srcs = glob(["*.kt"]),
     visibility = ["//executioncontext/api:__pkg__"],
     exports = [
         "//executioncontext/projectview:model",
