--- a/server/executioncontext/installationcontext/src/test/java/org/jetbrains/bsp/bazel/installationcontext/BUILD
+++ b/server/executioncontext/installationcontext/src/test/java/org/jetbrains/bsp/bazel/installationcontext/BUILD
@@ -1,14 +1,4 @@
-load("//:junit5.bzl", "java_junit5_test", "kt_junit5_test")
-
-java_junit5_test(
-    name = "InstallationContextTest",
-    size = "small",
-    srcs = ["InstallationContextTest.java"],
-    test_package = "org.jetbrains.bsp.bazel.installationcontext",
-    deps = [
-        "//executioncontext/installationcontext/src/main/java/org/jetbrains/bsp/bazel/installationcontext",
-    ],
-)
+load("//:junit5.bzl", "kt_junit5_test")
 
 kt_junit5_test(
     name = "InstallationContextConstructorTest",
@@ -18,4 +8,20 @@ kt_junit5_test(
     deps = [
         "//executioncontext/installationcontext/src/main/java/org/jetbrains/bsp/bazel/installationcontext",
     ],
+)
+
+kt_junit5_test(
+    name = "InstallationContextDebuggerAddressEntityMapperTest",
+    size = "small",
+    srcs = ["InstallationContextDebuggerAddressEntityMapperTest.kt"],
+    associates = ["//executioncontext/installationcontext/src/main/java/org/jetbrains/bsp/bazel/installationcontext"],
+    test_package = "org.jetbrains.bsp.bazel.installationcontext",
+)
+
+kt_junit5_test(
+    name = "InstallationContextJavaPathEntityMapperTest",
+    size = "small",
+    srcs = ["InstallationContextJavaPathEntityMapperTest.kt"],
+    associates = ["//executioncontext/installationcontext/src/main/java/org/jetbrains/bsp/bazel/installationcontext"],
+    test_package = "org.jetbrains.bsp.bazel.installationcontext",
 )
