--- a/server/executioncontext/workspacecontext/src/test/java/org/jetbrains/bsp/bazel/workspacecontext/BUILD
+++ b/server/executioncontext/workspacecontext/src/test/java/org/jetbrains/bsp/bazel/workspacecontext/BUILD
@@ -1,21 +1,21 @@
-load("//:junit5.bzl", "java_junit5_test", "kt_junit5_test")
+load("//:junit5.bzl", "kt_junit5_test")
 
 kt_junit5_test(
-    name = "WorkspaceContextConstructorImplTest",
+    name = "WorkspaceContextConstructorTest",
     size = "small",
-    srcs = ["WorkspaceContextConstructorImplTest.kt"],
+    srcs = ["WorkspaceContextConstructorTest.kt"],
     test_package = "org.jetbrains.bsp.bazel.workspacecontext",
     deps = [
         "//executioncontext/workspacecontext/src/main/java/org/jetbrains/bsp/bazel/workspacecontext",
     ],
 )
 
-java_junit5_test(
-    name = "WorkspaceContextTest",
+kt_junit5_test(
+    name = "WorkspaceContextTargetsEntityMapperTest",
     size = "small",
-    srcs = ["WorkspaceContextTest.java"],
-    test_package = "org.jetbrains.bsp.bazel.workspacecontext",
-    deps = [
+    srcs = ["WorkspaceContextTargetsEntityMapperTest.kt"],
+    associates = [
         "//executioncontext/workspacecontext/src/main/java/org/jetbrains/bsp/bazel/workspacecontext",
     ],
+    test_package = "org.jetbrains.bsp.bazel.workspacecontext",
 )
