--- a/server/executioncontext/api/BUILD
+++ b/server/executioncontext/api/BUILD
@@ -1,11 +1,9 @@
-load("@rules_java//java:defs.bzl", "java_library")
+load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
 
-java_library(
+kt_jvm_library(
     name = "api",
     visibility = ["//executioncontext:__subpackages__"],
     exports = [
         "//executioncontext/api/src/main/java/org/jetbrains/bsp/bazel/executioncontext/api",
-        "//executioncontext/api/src/main/java/org/jetbrains/bsp/bazel/executioncontext/api/entries",
-        "//executioncontext/api/src/main/java/org/jetbrains/bsp/bazel/executioncontext/api/entries/mappers",
     ],
 )
