[change] files utils (#239)
* lazy class out

* DopeFiles.readText

* DopeFiles.writeText

* DopeTemp

* DopeTemp usages

* DopeTemp works now

* buildier

* more usaaages

* createDirectories

* GH actions update

--- a/server/bazelrunner/src/test/java/org/jetbrains/bsp/bazel/bazelrunner/BUILD
+++ b/server/bazelrunner/src/test/java/org/jetbrains/bsp/bazel/bazelrunner/BUILD
@@ -7,6 +7,7 @@ kt_junit5_test(
     test_package = "org.jetbrains.bsp.bazel.bazelrunner",
     deps = [
         "//bazelrunner/src/main/java/org/jetbrains/bsp/bazel/bazelrunner",
+        "//utils:dope",
         "@maven//:io_vavr_vavr",
     ],
 )
