--- a/server/executioncontext/projectview/src/test/java/org/jetbrains/bsp/bazel/projectview/generator/BUILD
+++ b/server/executioncontext/projectview/src/test/java/org/jetbrains/bsp/bazel/projectview/generator/BUILD
@@ -8,5 +8,6 @@ kt_junit5_test(
     deps = [
         "//executioncontext/projectview:parser",
         "//executioncontext/projectview/src/main/java/org/jetbrains/bsp/bazel/projectview/generator",
+        "//utils:dope",
     ],
 )
