--- a/server/server/src/test/java/org/jetbrains/bsp/bazel/server/sync/BUILD
+++ b/server/server/src/test/java/org/jetbrains/bsp/bazel/server/sync/BUILD
@@ -8,6 +8,7 @@ java_junit5_test(
     deps = [
         "//logger",
         "//server/src/main/java/org/jetbrains/bsp/bazel/server/sync",
+        "//utils:dope",
         "@maven//:io_vavr_vavr",
     ],
 )
