Extract bazel-specific code to another class

--- a/bsp-testkit2/BUILD
+++ b/bsp-testkit2/BUILD
@@ -7,3 +7,11 @@ scala_library(
         "//bsp-testkit/client",
     ],
 )
+
+scala_library(
+    name = "bazel-testkit-client",
+    visibility = ["//visibility:public"],
+    exports = [
+        "//bsp-testkit/client/bazel",
+    ],
+)
