[feature] project view supports `import_depth` (#248)

--- a/server/executioncontext/workspacecontext/src/test/java/org/jetbrains/bsp/bazel/workspacecontext/BUILD
+++ b/server/executioncontext/workspacecontext/src/test/java/org/jetbrains/bsp/bazel/workspacecontext/BUILD
@@ -49,3 +49,13 @@ kt_junit5_test(
     ],
     test_package = "org.jetbrains.bsp.bazel.workspacecontext",
 )
+
+kt_junit5_test(
+    name = "ImportDepthSpecMapperTest",
+    size = "small",
+    srcs = ["ImportDepthSpecMapperTest.kt"],
+    associates = [
+        "//executioncontext/workspacecontext/src/main/java/org/jetbrains/bsp/bazel/workspacecontext",
+    ],
+    test_package = "org.jetbrains.bsp.bazel.workspacecontext",
+)
