[change] e2e test for local jdk and remote jdk (#253)
* some not working changes in java 8 test

* java 8 test passed

* changes in java 11 test but fails

* java 11 test passing

* reformat

* reformat

* java 11 test fix

* Java11ProjectTest converted into RemoteJdkTest

* Java8ProjectTest converted into LocalaJdkTest

* LocalJdk and RemoteJdk tests passing but in a wrong way

* RemoteJdkTest fix

* format

* small fix in RemoteJdkTest

* remote jdk updated, local jdk now working with java 17

* OS update in RemoteJdkTEst

* Remoto JDK test time change

* format

* names of the tests are changed

* tests updated

* DiagnosticsServiceTest fixed

* DiagnosticsServiceTest fixed

* tests converted into kotlin

* fix buildifier and remove some comments

* yml file updated

* fix in remotejdk test

* small fixes

* small fixes

* small fixes

* small fixes

* changelog updated

* changelog updated

Co-authored-by: Basak Kapusuzoglu <basak.kapusuzoglu@jetbrains.com>

--- a/server/e2e/BUILD
+++ b/server/e2e/BUILD
@@ -29,20 +29,20 @@ sh_binary(
 )
 
 sh_binary(
-    name = "BazelBspJava8ProjectTest",
+    name = "BazelBspLocalJdkTest",
     srcs = ["runTest.sh"],
     args = [
-        "//e2e/src/main/java/org/jetbrains/bsp/bazel:BazelBspJava8ProjectTest",
-        "e2e/test-resources/java-8-project",
+        "//e2e/src/main/java/org/jetbrains/bsp/bazel:BazelBspLocalJdkTest",
+        "e2e/test-resources/local-jdk-project",
     ],
 )
 
 sh_binary(
-    name = "BazelBspJava11ProjectTest",
+    name = "BazelBspRemoteJdkTest",
     srcs = ["runTest.sh"],
     args = [
-        "//e2e/src/main/java/org/jetbrains/bsp/bazel:BazelBspJava11ProjectTest",
-        "e2e/test-resources/java-11-project",
+        "//e2e/src/main/java/org/jetbrains/bsp/bazel:BazelBspRemoteJdkTest",
+        "e2e/test-resources/remote-jdk-project",
     ],
 )
 
